# pgp-disc

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: gpg.rs  lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
