[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-std"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
hex = "0.4"

common = { path = "../common" }
transport = { path = "../transport" }
crypto = { path = "../crypto" }
